samples/_failures_safe/1761428095_de7273_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33476b04.c: In function ‘main’:
./samples/SAFE/__tmp_33476b04.c:154:16: error: missing terminating " character
  154 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_33476b04.c:154:9: error: expected expression at end of input
  154 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_33476b04.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_33476b04.c:154:9: error: expected declaration or statement at end of input
